Changed "Issues:" to "Issues/Questions:" to sync with ALReq group.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <figcaption>Z-ን or “Zen” Reference Alignment.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What Ethiopic letter should be applied as a height reference point for alignment?</li>
               <li>Should height alignment be attempted as per the letter inventory of a target language level or for the script as a whole (practical but less optimal)?</li>
@@ -178,7 +178,7 @@
         pragmatic outcome when an author finds manually changing between fonts too burdensome. 
         The view of professional publishers is unknown here and should be determined.</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>When publishing in the classical Ethiopic weight, should English words appear in their default English weight?</li>
               <li>If heavier Latin letters are desirable, how much so? Can a weight increase be defined as a percentage of the Ethiopic?</li>
@@ -212,7 +212,7 @@
         <figcaption>Samples of Ethiopicized punctuation compared to shapes in a companion Latin typeface.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Are there any additional western symbols required for Ethiopic writing?</li>
               <li>Are any symbols from other foreign script (Chinese, Arabic, etc) that should be included?</li>
@@ -244,7 +244,7 @@
           <p>As a rule within the embedded foreign script, the weight of punctuation and other symbol (numbers, etc) should be in keeping
         with the weight of the foreign weight and not that of the surrounding Ethiopic.</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What do stakeholders feel should be the default weight for enclosing punctuation?</li>
               <li>Would preferences change if Ethiopic wordspace were applied in the samples?</li>
@@ -327,7 +327,7 @@
         <figcaption>Two gemination styles compared.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What do stakeholders feel should be the default style (fixed, floating)?</li>
               <li>The same rules apply to the ETHIOPIC COMBINING VOWEL LENGTH MARK (U+135E) and ETHIOPIC COMBINING GEMINATION AND VOWEL LENGTH MARK (U+135D). Stakeholders here (current or past) should be identified.</li>
@@ -345,7 +345,7 @@
         <figcaption>Two numeral styles compared.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What do stakeholders feel should be the default style (joined, isolated)?</li>
               <li>Do stakeholders want the option for both styles?</li>
@@ -361,7 +361,7 @@
         <figcaption>Three vertical alignments compared.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Are the vertical alignment rules of Roman or Coptic numerals appropriate (and what are they)?</li>
               <li>In what layout context is right justification appropriate?</li>
@@ -381,8 +381,8 @@
           idiosyncratic to an author but may represent a convention in use by a publishing house.  A best practice supported by stakeholders should be
           established here.</p>
     <div  class="issues">
-          <p>Issues:</p>
-          <ol>
+    <p>Issues/Questions:</p>
+      <ol>
         <li>How much should a paragraph be indented?</li>
         <li>Should the first paragraph of a section be indented?</li>
         <li>Should a new paragraph be indented following a list?</li>
@@ -442,10 +442,10 @@
           <h4>Justification When SPACE is the Word Delimiter</h4>
           <p>When white space (U+0020) is used as the word separator in Ethiopic text, the line spacing rules applicable to western text may be applied to meet user expectations..</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
-              <li>Is the above assessment correct? Are there any special justification formatting considerations when SPACE is used with Ethiopic text?</li>
-            </ol>
+          <li>Is the above assessment correct? Are there any special justification formatting considerations when SPACE is used with Ethiopic text?</li>
+        </ol>
       </div>
         </section>
     <section id="justification_with_wordspace">
@@ -477,12 +477,12 @@
           <figure id="fig_white_space_round_wordspace"> <img src="images/white_space_round_wordspace.png" alt=" " />
         <figcaption> Depiction of white space around Ethiopic wordspace for three modes of text justification.</figcaption>
       </figure>
-          <div  class="issues">
-        <p>Issues:</p>
+        <div  class="issues">
+        <p>Issues/Questions:</p>
         <ol>
-              <li>Which spacing style should be the default used by applications?</li>
-              <li>Is the original term, “left bounded”, a better (more descriptive) term than “word bounded”?</li>
-            </ol>
+          <li>Which spacing style should be the default used by applications?</li>
+          <li>Is the original term, “left bounded”, a better (more descriptive) term than “word bounded”?</li>
+        </ol>
       </div>
         </section>
     <section id="spacing_threshold_following_full_stop">
@@ -492,7 +492,7 @@
         <figcaption>Justification Sample from  Maṣḥafa Sawāsew, Page 159 (Kifle, 1955 (1948 EC))</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Does the additional spacing after fullstop apply to other Ethiopic punctuation?  Additional spacing is also seen in the above sample following ETHIOPIC SEMICOLON.</li>
               <li>Is additional spacing after punctuation desirable by current day publishers?  If so, how much space and for which punctuation symbols?</li>
@@ -532,7 +532,7 @@
         <figcaption>Diamond bullet size relative to letter height.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred bullet shapes?</li>
               <li>What are the preferred shape sequences in nested lists (e.g. bullet hierarchy)?</li>
@@ -559,7 +559,7 @@
           <p>In Ethiopic ordered lists a number of symbols are used for the list marker (suffix).
         For example "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred list marker symbols? What is the best default?</li>
               <li>How much, if any, white space follows the suffix?</li>
@@ -582,7 +582,7 @@
         <figcaption>Alphabetical list aligned on marker.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What alignment style(s) do stakeholders desire?</li>
             </ol>
@@ -603,7 +603,7 @@
           <p>Ethiopic literature will apply ordered numbered list using both Ethiopic and Western numeral systems. Ethiopic numeral
         lists are addressed in the <a href="https://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a> section of the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What is the list item marker preference with Ethiopic numbers?</li>
               <li>What is the list item marker preference with western numbers?</li>
@@ -869,7 +869,7 @@
 </pre>
       </div>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>ቨ appears to be equally included and omitted in lists.</li>
               <li>How is end of sequence handled?
@@ -1094,7 +1094,7 @@
 </pre>
       </div>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>ቨ appears to be equally included and omitted in lists.</li>
               <li>How is end of sequence handled?
@@ -1116,7 +1116,7 @@
         <figcaption>Sample for inlined paragraph continuation at end of list.</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Is this an older style? Idiosyncratic to a few authors? The desired norm?</li>
               <li>When appropriate, what is the width of the paragraph offset (if any) from the final list item?</li>
@@ -1168,7 +1168,7 @@
     <h6 style="display: block; color: black; font-size: .67em; font-weight: bold; background-color: #99ccff">አርእስት 6</h6>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
     <div  class="issues">
-          <p>Issues:</p>
+          <p>Issues/Questions:</p>
           <ol>
         <li>Should heading sizes 1 and 2 be centered by default, or should this be left to custom stylesheet?</li>
         <li>What percentage emboldened when a bold designed typeface is not available?</li>
@@ -1180,7 +1180,7 @@
     <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
     <p>[Examples Needed]</p>
     <div  class="issues">
-          <p>Issues:</p>
+          <p>Issues/Questions:</p>
           <ol>
         <li>How much slant when an italic designed typeface is not available? 10% is suggested.</li>
       </ol>
@@ -1211,7 +1211,7 @@
           <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser'ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
         </figure>
     <div  class="issues">
-          <p>Issues:</p>
+          <p>Issues/Questions:</p>
           <ol>
         <li>What shade of red?</li>
         <li>What is the preferred substitute for red when only monochrome publishing is available?</li>
@@ -1222,7 +1222,7 @@
     <h3>Emphasis With Ethiopic Wordspace</h3>
     <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge'ez literature tradition. </p>
     <div  class="issues">
-          <p>Issues:</p>
+          <p>Issues/Questions:</p>
           <ol>
         <li>Does this rule make aesthetic sense in full justification with wordspace in centered posititioning style? In Ge'ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
       </ol>
@@ -1285,7 +1285,7 @@
         <span style="margin-left:40px;"> ጠቅላይ ሚኒስትር ⇒ ጠ/ሚ/ር</span><br/>
         <span style="margin-left:40px;"> ኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተ ክርስቲያን ⇒ ኢ/ኦ/ተ/ቤ/ክ</span> </p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>When "." is used as the abbreviation marker, it is sometimes found at the end of the abbreviation.</li>
               <li>Confirm single word abbreviation rule.</li>
@@ -1304,7 +1304,7 @@
         The ordinal marker is often, but not always, rendered in superscript form. The superscript practice is most prevalent with ordinals
         in western numerals, but is also applied with Ethiopic numerals.</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What letters should be superscripted, and it what contexts? For example, "ሳ" and "ብር" may also be superscripted in
             presentation of prices but is not common in print (found mostly in store front advertising).</li>
@@ -1349,7 +1349,7 @@
         <figcaption>Ethiopic Wordspace in the context of comma (Itedalewe, 1987 (1979 EC))</figcaption>
       </figure>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Should comma context be a user preference?</li>
               <li>Not an issue but a note; an author of this document recommends strongly preserving the symbol semantics of Ethiopic Wordspace and not overloading it with the semantics of Ethiopic Comma. Doing so simplifies spacing rules for the Wordspace symbol as the comma usage context will not need to be addressed. Applying the "decayed glyph" perspective as an alternative glyph in a font is preferred as it mitigates the semantic overloading.</li>
@@ -1361,7 +1361,7 @@
           <p>Parenthetical expressions are found regularly in modern Ethiopic writing and will apply any of the enclosing symbol pairs:
         // , () and [].</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred parenthetical enclosing symbol pairs for modern writing?</li>
               <li>Do special rules apply for inner expressions?</li>
@@ -1385,7 +1385,7 @@
         <p>The identical scenarios are likewise found with Ethiopic wordspace in the presence of a closing quotation mark and must also be addressed. </p>
       </section>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Which of the above two forms is considered most appropriate?</li>
               <li>Do special rules, or exceptions, apply with Ethiopic wordspace around closing symbols?</li>
@@ -1400,7 +1400,7 @@
         The choice of Latin script quotation may represent either an author preference or a software limitation that made guillemets
         unavailable or difficult to access.</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred quotation marks for modern Ethiopic literature?</li>
               <li>Is the single quotation mark usage statement correct?</li>
@@ -1416,7 +1416,7 @@
           <p>Both pre-composed and mid-line ellipsis are found in Ethiopic literature. The presence of one over the other may simply be an
         artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Which ellipsis form is the preferred as the default?</li>
               <li>How much spacing between dots is desirable?</li>
@@ -1460,7 +1460,7 @@
           <div class="example" id="-example"> &nbsp;&nbsp;&nbsp;&nbsp;
         ደረጀ ገብሬ፤ ሚያዝያ 1996፤ <i>ተግባራዊ፡የጽህፈት፡መማሪያ።</i> ንግድ ማተሚያ ድርጅት፤ አዲስ አበባ። </div>
           <div  class="issues">
-        <p>Issues:</p>
+        <p>Issues/Questions:</p>
         <ol>
               <li>Does the Ethiopian Writer's Association endorse any conventions for media citation?</li>
               <li>What are formats for other media types?</li>
