Removed superfluous "level" from a question.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p>Issues/Questions:</p>
         <ol>
               <li>What Ethiopic letter should be applied as a height reference point for alignment?</li>
-              <li>Should height alignment be attempted as per the letter inventory of a target language level or for the script as a whole (practical but less optimal)?</li>
+              <li>Should height alignment be attempted as per the letter inventory of a target language or for the script as a whole (practical but less optimal)?</li>
               <li>Relative to a Latin uppercase letter, should the height of Ethiopic letters: (a) equal (b) shorter (c) taller?</li>
               <li>Is height alignment an issue with other writing systems?  If so, how is it addressed?</li>
             </ol>
