--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
         <ol>
               <li>What do stakeholders feel should be the default style (fixed, floating)?</li>
               <li>The same rules apply to the ETHIOPIC COMBINING VOWEL LENGTH MARK (U+135E) and ETHIOPIC COMBINING GEMINATION AND VOWEL LENGTH MARK (U+135D). Stakeholders here (current or past) should be identified.</li>
-              <li>OpenType shaping logic may be sufficient to handle the issue.  Thus a specification here might only be utilized by font</li>
+              <li>OpenType shaping logic may be sufficient to handle the issue.  Thus a specification here might only be utilized by font.</li>
+              <li>Note that the same "fixed-vs-floating" question applies to superscript text relative to base text.</li>
             </ol>
       </div>
         </section>
