--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     <h3>Justification</h3>
     <section id="justification_with_space">
           <h4>Justification When SPACE is the Word Delimiter</h4>
-          <p>When white space (U+0020) is used as the word separator in Ethiopic text, the line spacing rules applicable to western text may be applied to meet user expectations..</p>
+          <p>When white space (U+0020) is used as the word separator in Ethiopic text, the line spacing rules applicable to western text may be applied to meet user expectations.</p>
           <div  class="issues">
         <p>Issues/Questions:</p>
         <ol>
@@ -563,7 +563,7 @@
         <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred list marker symbols? What is the best default?</li>
-              <li>How much, if any, white space follows the suffix?</li>
+              <li>How much, if any, white space follows the suffix? Perhaps the same amount of space as would follow a bullet symbol?</li>
               <li>Do copy editors or publishers set a policy for list item markers, or leave it up to the author to decide?</li>
               <li>Of interest: when are ordered lists first found in Ethiopic writing and in what form?</li>
             </ol>
@@ -872,8 +872,8 @@
           <div  class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>ቨ appears to be equally included and omitted in lists.</li>
-              <li>How is end of sequence handled?
+              <li>ቨ appears to be equally included and omitted in ሀለሐመ  lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
+              <li>How is end of sequence handled in ሀለሐመ  lists?
             <ol type="a">
                   <li>Sequence as radix, e.g.: ... ፈ ... ፐ ... ሀሀ ... ሀለ ...</li>
                   <li>Columnar radix, e.g.: ... ፈ ... ፐ ... ሀሁ ... ሀሉ ...</li>
@@ -1097,8 +1097,8 @@
           <div  class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>ቨ appears to be equally included and omitted in lists.</li>
-              <li>How is end of sequence handled?
+              <li>ቨ appears to be equally included and omitted in አበገደ lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
+              <li>How is end of sequence handled in አበገደ lists?
             <ol type="a">
                   <li>Sequence as radix, e.g.: ... ጰ ... ፐ ... አአ ... አበ ...</li>
                   <li>Columnar radix, e.g.: ... ጰ ... ፐ ... አቡ ... አጉ ...</li>
