More question adjustment and additions in the Ordinal Notation section.

--- a/index.html
+++ b/index.html
@@ -1223,9 +1223,10 @@
     <h3>Emphasis With Ethiopic Wordspace</h3>
     <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge'ez literature tradition. </p>
     <div  class="issues">
-          <p>Issues/Questions:</p>
-          <ol>
-        <li>Does this rule make aesthetic sense in full justification with wordspace in centered posititioning style? In Ge'ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
+      <p>Issues/Questions:</p>
+      <ol>
+        <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge'ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
+      <li>Related: Does word emphasis include a following punctuation?</li>
       </ol>
         </div>
   </section>
@@ -1313,6 +1314,8 @@
               <li>An argument goes that superscript of "ኛ" should not follow an Ethiopic numerals since the counting system is put into a Ge'ez context
             and Ge'ez literature does not use a superscript.  Yet "ኛ" is appropriate to Amharic language and is not a letter found in Ge'ez. The class of
             literature may be at issue here, such a religious materials.</li>
+              <li>What should the height (in percentage) of the superscripted symbol be with respect to the base text?</li>
+              <li>How should the superscripted symbol be aligned vertically with the base text?</li>
             </ol>
       </div>
         </section>
