Question clarity in ordinals section.

--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@
     <h2>Other</h2>
     <p>Literature best practices of interest for the survey that are not know to be layout topics</p>
     <section id="ethiopic_abbreviation_formation">
-          <h3>Abbreviation formation</h3>
+          <h3>Abbreviation Formation</h3>
           <p>Abbreviations in Ethiopic languages will apply an abbreviation marker ("/" or ".") placed between the first letters of each word in a phrase.
         Single word abbreviation that applies a right side truncation (vs mid) will apply a "." as the abbreviation maker.
         In a multi-word abbreviations the last word may remain whole. Two letter words are only abbreviated in a multi-word abbreviation. </p>
@@ -1310,7 +1310,7 @@
         <ol>
               <li>What letters should be superscripted, and it what contexts? For example, "ሳ" and "ብር" may also be superscripted in
             presentation of prices but is not common in print (found mostly in store front advertising).</li>
-              <li>Always superscript? Language or locale specific? As a setting?</li>
+              <li> Are ordinals always superscripted, or is superscript language or locale specific? Should superscript for ordinals be a setting?</li>
               <li>An argument goes that superscript of "ኛ" should not follow an Ethiopic numerals since the counting system is put into a Ge'ez context
             and Ge'ez literature does not use a superscript.  Yet "ኛ" is appropriate to Amharic language and is not a letter found in Ge'ez. The class of
             literature may be at issue here, such a religious materials.</li>
