Re-expressed question on wordspace formatting names and use cases.

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         <p>Issues/Questions:</p>
         <ol>
           <li>Which spacing style should be the default used by applications?</li>
-          <li>Is the original term, “left bounded”, a better (more descriptive) term than “word bounded”?</li>
+          <li>Do stakeholders have names or use-cases for these different wordspace formatting styles?</li>
         </ol>
       </div>
         </section>
